# AutonomousKart

./: .gitignore  .gitmodules  README.md  convert.py  hold.py  main.py  requirements.txt  test.py  util.py
.devcontainer/: devcontainer.jetson.json  devcontainer.json  devcontainer.pi.json  devcontainer.rubik.json
.github/workflows/: build-devcontainer.yml  tests.yml
compose/: docker-compose.yml
data/racing_line/: line.csv  line10.csv  line12.csv  line14.csv  line15.csv  line16.csv  line2.csv  line4.csv  line6.csv  line8.csv
docker/: Dockerfile  cyclonedds.xml
docs/README/: quickstart.md
docs/setup/: pycharm.md  vscode.md
log/: latest_build  latest_list
opencv_testing/: angle_calculator.py  opencv_testing.py  pathfinder.py
scripts/: devcontainer_post_attach.sh  devcontainer_post_create.sh  entrypoint.sh  optimize_sim.py  run_sim.sh  start.bash  sweep_mpc.py
scripts/data_sim/tests/: test_load_bags.py  test_smoke.py
sim/: __init__.py  clamp.py  closed_loop.py  data_sim.py  identify_bicycle.py  load_bags.py  noise_model.py  render.py  requirements.txt  residual_mlp.py  runner.py  validate.py
sim/model/: bicycle_params.json  clamp.json  mlp.pt  noise.json  norm.json  residual_emp.npz
sim/slurm/: residuals.sbatch  run1.sbatch  sweep_params.sbatch  validate.sbatch
sim/tests/: conftest.py  test_clamp.py  test_data_sim.py  test_identify_bicycle.py  test_load_bags.py  test_noise_model.py  test_residual_mlp.py  test_smoke.py  test_validate.py
src/autonomous_kart/: package.xml  setup.cfg  setup.py
src/autonomous_kart/autonomous_kart_cpp/: CMakeLists.txt  package.xml
src/autonomous_kart/autonomous_kart_cpp/src/: camera_node.cpp
src/autonomous_kart/test/: conftest.py  test_dynamic_line.py  test_e2e_launch.py  test_ekf.py  test_gbm_trainer.py  test_imu_node.py  test_label.py  test_localization_node.py  test_master_node.py  test_master_residual_api.py  test_motor_steering_nodes.py  test_pathfinder_closest_idx.py  test_pathfinder_node.py  test_pathfinder_rpp.py  (+6 more)
src/autonomous_kart_cpp/: CMakeLists.txt  package.xml
src/bringup/: package.xml  setup.py
src/evc_msgs/: CMakeLists.txt  package.xml
src/evc_msgs/msg/: VehicleStatus.msg
src/messages/: ActuatorCommand.msg  CMakeLists.txt
src/planner/: package.xml  setup.py
src/sensors/: package.xml  setup.py
src/state/: lifecycle_base.py  package.xml  setup.py
viz/: viz.html
(+79 files in other folders)
